--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -7,7 +7,7 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, min_ios_version_supported
+platform :ios, 14.0
 prepare_react_native_project!
 
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
@@ -52,6 +52,14 @@ target 'RctWidgetExtensionExample' do
     # Pods for testing
   end
 
+  target 'TodayWidgetExtension' do
+    inherit! :complete
+    # Pods for widget
+  end
+
+  # pod 'ReactCommon/turbomodule/samples', :path => "../node_modules/react-native/ReactCommon"
+  pod 'ReactCommon-Samples', :path => "../node_modules/react-native/ReactCommon/react/nativemodule/samples"
+  pod 'React-Fabric/components/rncore', :path => "../node_modules/react-native/ReactCommon"
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
@@ -60,5 +68,10 @@ target 'RctWidgetExtensionExample' do
       :mac_catalyst_enabled => false
     )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'No'
+      end
+    end
   end
 end
