--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "pods": "pod-install --quiet"
+    "pods": "USE_HERMES=1 && RCT_NEW_ARCH_ENABLED=1 && pod-install --quiet"
   },
   "dependencies": {
     "react": "18.2.0",
