--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -57,10 +57,10 @@ target 'RctWidgetExtensionExample' do
     # Pods for widget
   end
 
-  # pod 'ReactCommon/turbomodule/samples', :path => "../node_modules/react-native/ReactCommon"
   pod 'ReactCommon-Samples', :path => "../node_modules/react-native/ReactCommon/react/nativemodule/samples"
   pod 'React-Fabric/components/rncore', :path => "../node_modules/react-native/ReactCommon"
-  post_install do |installer|
+
+post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
       installer,
@@ -68,9 +68,13 @@ target 'RctWidgetExtensionExample' do
       :mac_catalyst_enabled => false
     )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+
+    target_names_to_update = ['FlipperKit', 'React-RCTLinking']
     installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |config|
-        config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'No'
+      if target_names_to_update.include?(target.name)
+        target.build_configurations.each do |config|
+          config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'No'
+        end
       end
     end
   end
