--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "release": "release-it",
     "example": "yarn --cwd example",
     "build:android": "cd example/android && ./gradlew assembleDebug --no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a",
-    "build:ios": "cd example/ios && xcodebuild -workspace RctWidgetExtensionExample.xcworkspace -scheme RctWidgetExtensionExample -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO",
+    "build:ios": "cd example/ios && xcodebuild -workspace RctWidgetExtensionExample.xcworkspace -scheme RctWidgetExtensionExample -configuration Debug -sdk iphonesimulator",
     "bootstrap": "yarn example && yarn install && yarn setup_widget && yarn example pods",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build",
     "setup_widget": "ruby ./scripts/modify_podfile.rb"
