--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
   build-ios:
     runs-on: macos-latest
     env:
-      TURBO_CACHE_DIR: .turbo/ios
+      TURBO_CACHE_DIR: .turbo/ios-cache
     steps:
       - name: Checkout
         uses: actions/checkout@v3
