fix: remove cache dir

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,4 +94,4 @@ jobs:
 
       - name: Build example for iOS
         run: |
-          yarn build:ios --cache-dir="${{ env.TURBO_CACHE_DIR }}"
+          yarn build:ios
