--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: yarn prepack
 
   build-ios:
-    runs-on: macos-latest
+    runs-on: macos-13
     env:
       TURBO_CACHE_DIR: .turbo/ios-cache
     steps:
