--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,8 +49,8 @@ jobs:
 
   build-ios:
     runs-on: macos-13
-    env:
-      TURBO_CACHE_DIR: .turbo/ios-cache
+    # env:
+    #   TURBO_CACHE_DIR: .turbo/ios-cache
     steps:
       - name: Select Xcode
         uses: maxim-lobanov/setup-xcode@v1
@@ -63,13 +63,13 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
-      - name: Cache turborepo for iOS
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.TURBO_CACHE_DIR }}
-          key: ${{ runner.os }}-turborepo-ios-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-turborepo-ios-
+      # - name: Cache turborepo for iOS
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ${{ env.TURBO_CACHE_DIR }}
+      #     key: ${{ runner.os }}-turborepo-ios-${{ hashFiles('**/yarn.lock') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-turborepo-ios-
 
       # - name: Check turborepo cache for iOS
       #   run: |
@@ -79,16 +79,16 @@ jobs:
       #       echo "turbo_cache_hit=1" >> $GITHUB_ENV
       #     fi
 
-      - name: Cache cocoapods
-        # if: env.turbo_cache_hit != 1
-        id: cocoapods-cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            **/ios/Pods
-          key: ${{ runner.os }}-cocoapods-${{ hashFiles('example/ios/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cocoapods-
+      # - name: Cache cocoapods
+      #   # if: env.turbo_cache_hit != 1
+      #   id: cocoapods-cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: |
+      #       **/ios/Pods
+      #     key: ${{ runner.os }}-cocoapods-${{ hashFiles('example/ios/Podfile.lock') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-cocoapods-
 
       - name: Install cocoapods
         # if: env.turbo_cache_hit != 1 && steps.cocoapods-cache.outputs.cache-hit != 'true'
