fix: testing ci fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,7 @@ jobs:
       - name: Install cocoapods
         # if: env.turbo_cache_hit != 1 && steps.cocoapods-cache.outputs.cache-hit != 'true'
         run: |
-          yarn example pods
+          yarn setup_widget && yarn example pods
         env:
           NO_FLIPPER: 1
 
