--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,5 @@
 name: CI
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -49,8 +46,8 @@ jobs:
 
   build-ios:
     runs-on: macos-13
-    # env:
-    #   TURBO_CACHE_DIR: .turbo/ios-cache
+    env:
+      TURBO_CACHE_DIR: example/ios/Pods
     steps:
       - name: Select Xcode
         uses: maxim-lobanov/setup-xcode@v1
@@ -62,6 +59,15 @@ jobs:
 
       - name: Setup
         uses: ./.github/actions/setup
+
+      - name: Cache Pods
+        uses: actions/cache@v3
+        id: pods-cache
+        with:
+          path: ${{ env.TURBO_CACHE_DIR }}
+          key: ${{ runner.os }}-pods-${{ hashFiles('example/ios/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
 
       # - name: Cache turborepo for iOS
       #   uses: actions/cache@v3
@@ -91,7 +97,6 @@ jobs:
       #       ${{ runner.os }}-cocoapods-
 
       - name: Install cocoapods
-        # if: env.turbo_cache_hit != 1 && steps.cocoapods-cache.outputs.cache-hit != 'true'
         run: |
           yarn setup_widget && yarn example pods
         env:
