--- a/turbo.json
+++ b/turbo.json
@@ -1,26 +1,12 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
-    "build:android": {
-      "inputs": [
-        "package.json",
-        "android",
-        "!android/build",
-        "src/*.ts",
-        "src/*.tsx",
-        "example/package.json",
-        "example/android",
-        "!example/android/.gradle",
-        "!example/android/build",
-        "!example/android/app/build"
-      ],
-      "outputs": []
-    },
     "build:ios": {
       "inputs": [
         "package.json",
         "*.podspec",
         "ios",
+        "scripts",
         "src/*.ts",
         "src/*.tsx",
         "example/package.json",
