--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,9 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
+      - name: Restore buildcache
+        uses: mikehardy/buildcache-action@v1
+
       - name: Cache Pods
         uses: actions/cache@v3
         id: pods-cache
