feat: add tempalte folder to npm artifacts

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cpp",
     "scripts",
     "*.podspec",
+    "template",
     "!lib/typescript/example",
     "!ios/build",
     "!android/build",
