feat: automate setup for widget target (#4)
* feat: add template files

* feat: update ruby scripts to support dynamic widget targets

* feat: add bundle identifier to scripts

* feat: add swiftui renderer code in template

* feat: add tempalte folder to npm artifacts

* feat: add react native bundle script for widet

* feat: add optparse for better DX

* docs: update docs with new script info

* fix: setup_widget script

* fix: update gitignore for tgz

* fix: local setup in ruby scripts

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cpp",
     "scripts",
     "*.podspec",
+    "template",
     "!lib/typescript/example",
     "!ios/build",
     "!android/build",
@@ -38,10 +39,10 @@
     "build:ios": "cd example/ios && xcodebuild CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ -workspace RctWidgetExtensionExample.xcworkspace -scheme RctWidgetExtensionExample -configuration Release -sdk iphonesimulator16.4",
     "bootstrap": "yarn example && yarn install && yarn setup_widget && yarn example pods",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build",
-    "setup_widget": "ruby ./scripts/modify_podfile.rb"
+    "setup_widget": "ruby ./scripts/setup_widget.rb"
   },
   "bin": {
-    "setup_widget": "./scripts/modify_podfile.rb"
+    "setup_widget": "./scripts/setup_widget.rb"
   },
   "keywords": [
     "react-native",
